@@ -1,3 +1,8 @@
+2022-01-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/ios-dev-sub.c (ios_dev_sub_handler_normalize): Fix error
+	reporting.
+
 2022-01-23  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-env.c (_decl): Allow re-registering types.
